Test fix z-index

--- a/assets/css/wimo-box.css
+++ b/assets/css/wimo-box.css
@@ -51,6 +51,7 @@
     opacity: 1;
     height: 200px;
     width: 200px;
+    z-index: 1000;
 
     /* background: #360033;
     background: -webkit-linear-gradient(to top, #0b8793, #360033);
